force-app/main/default/objects/Contact/fields/Children_Ages__c.field-meta.xml
<CustomField>
    <fullName>Children_Ages__c</fullName>
    <description>Ages of children in the household</description>
    <inlineHelpText>Enter the ages of all children in the household (e.g., "3, 7, 12").</inlineHelpText>
    <label>Children Ages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>