force-app/main/default/objects/Contact/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <description>Current status of the client in the IHSS program</description>
    <inlineHelpText>Select the client's current status in the In-Home Support Services program.</inlineHelpText>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending Assessment</fullName>
            </value>
            <value>
                <fullName>Re-assessment Due</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>