force-app/main/default/objects/Contact/fields/Current_Service_Hours__c.field-meta.xml
<CustomField>
    <fullName>Current_Service_Hours__c</fullName>
    <description>Number of approved service hours per week</description>
    <inlineHelpText>Enter the number of weekly service hours currently approved for this client.</inlineHelpText>
    <label>Current Service Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>