force-app/main/default/objects/Contact/fields/Family_Size__c.field-meta.xml
<CustomField>
    <fullName>Family_Size__c</fullName>
    <description>Total number of household members</description>
    <inlineHelpText>Enter the total number of people living in the household.</inlineHelpText>
    <label>Family Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>