force-app/main/default/objects/Contact/fields/Last_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assessment_Date__c</fullName>
    <description>Date of the most recent home visit assessment</description>
    <inlineHelpText>Date when the client's most recent IHSS assessment was completed.</inlineHelpText>
    <label>Last Assessment Date</label>
    <type>Date</type>
</CustomField>