force-app/main/default/objects/Contact/fields/Primary_Need_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Need_Category__c</fullName>
    <description>Primary need category identified in most recent assessment</description>
    <inlineHelpText>The highest-ranked need category from the client's most recent assessment.</inlineHelpText>
    <label>Primary Need Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Services</fullName>
            </value>
            <value>
                <fullName>Ambulation</fullName>
            </value>
            <value>
                <fullName>Meal Preparation</fullName>
            </value>
            <value>
                <fullName>Memory</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Judgment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>